--- a/PythonApplication1/interfaz2.ui
+++ b/PythonApplication1/interfaz2.ui
@@ -967,7 +967,7 @@ font:87 12pt &quot;Arial Black&quot;;}</string>
               </property>
               <item>
                <widget class="QWidget" name="widget_5" native="true">
-                <layout class="QVBoxLayout" name="verticalLayout_6" stretch="8">
+                <layout class="QVBoxLayout" name="verticalLayout_6" stretch="0">
                  <property name="spacing">
                   <number>0</number>
                  </property>
@@ -988,74 +988,185 @@ font:87 12pt &quot;Arial Black&quot;;}</string>
                    <property name="styleSheet">
                     <string notr="true"/>
                    </property>
-                   <widget class="QLabel" name="label_5">
-                    <property name="geometry">
-                     <rect>
-                      <x>180</x>
-                      <y>30</y>
-                      <width>251</width>
-                      <height>16</height>
-                     </rect>
+                   <layout class="QVBoxLayout" name="verticalLayout_10">
+                    <property name="spacing">
+                     <number>0</number>
                     </property>
-                    <property name="styleSheet">
-                     <string notr="true">font:87 12pt &quot;Arial Black&quot;;
+                    <property name="leftMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="topMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="rightMargin">
+                     <number>0</number>
+                    </property>
+                    <property name="bottomMargin">
+                     <number>0</number>
+                    </property>
+                    <item>
+                     <widget class="QLabel" name="label_5">
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>40</height>
+                       </size>
+                      </property>
+                      <property name="styleSheet">
+                       <string notr="true">font:87 12pt &quot;Arial Black&quot;;
 color: rgb(0, 0, 0);</string>
-                    </property>
-                    <property name="text">
-                     <string>Selección de Proceso</string>
-                    </property>
-                   </widget>
-                   <widget class="QComboBox" name="proceso2">
-                    <property name="geometry">
-                     <rect>
-                      <x>192</x>
-                      <y>70</y>
-                      <width>171</width>
-                      <height>22</height>
-                     </rect>
-                    </property>
-                    <property name="styleSheet">
-                     <string notr="true">background-color: rgb(255, 255, 255);
+                      </property>
+                      <property name="text">
+                       <string>Selección de Proceso</string>
+                      </property>
+                      <property name="alignment">
+                       <set>Qt::AlignCenter</set>
+                      </property>
+                     </widget>
+                    </item>
+                    <item>
+                     <widget class="QWidget" name="widget_12" native="true">
+                      <layout class="QHBoxLayout" name="horizontalLayout_9">
+                       <property name="spacing">
+                        <number>0</number>
+                       </property>
+                       <property name="leftMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="topMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="rightMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="bottomMargin">
+                        <number>0</number>
+                       </property>
+                       <item>
+                        <spacer name="horizontalSpacer_10">
+                         <property name="orientation">
+                          <enum>Qt::Horizontal</enum>
+                         </property>
+                         <property name="sizeHint" stdset="0">
+                          <size>
+                           <width>40</width>
+                           <height>20</height>
+                          </size>
+                         </property>
+                        </spacer>
+                       </item>
+                       <item>
+                        <widget class="QComboBox" name="proceso2">
+                         <property name="minimumSize">
+                          <size>
+                           <width>200</width>
+                           <height>30</height>
+                          </size>
+                         </property>
+                         <property name="maximumSize">
+                          <size>
+                           <width>200</width>
+                           <height>30</height>
+                          </size>
+                         </property>
+                         <property name="styleSheet">
+                          <string notr="true">background-color: rgb(255, 255, 255);
 font: 87 7pt &quot;Arial Black&quot;;
 </string>
-                    </property>
-                    <item>
-                     <property name="text">
-                      <string>Proceso 1</string>
-                     </property>
+                         </property>
+                         <item>
+                          <property name="text">
+                           <string>Proceso 1</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>Proceso 2</string>
+                          </property>
+                         </item>
+                         <item>
+                          <property name="text">
+                           <string>Proceso 3</string>
+                          </property>
+                         </item>
+                        </widget>
+                       </item>
+                       <item>
+                        <spacer name="horizontalSpacer_11">
+                         <property name="orientation">
+                          <enum>Qt::Horizontal</enum>
+                         </property>
+                         <property name="sizeHint" stdset="0">
+                          <size>
+                           <width>40</width>
+                           <height>20</height>
+                          </size>
+                         </property>
+                        </spacer>
+                       </item>
+                      </layout>
+                     </widget>
                     </item>
                     <item>
-                     <property name="text">
-                      <string>Proceso 2</string>
-                     </property>
-                    </item>
-                    <item>
-                     <property name="text">
-                      <string>Proceso 3</string>
-                     </property>
-                    </item>
-                   </widget>
-                   <widget class="QLabel" name="label_6">
-                    <property name="geometry">
-                     <rect>
-                      <x>130</x>
-                      <y>310</y>
-                      <width>291</width>
-                      <height>61</height>
-                     </rect>
-                    </property>
-                    <property name="styleSheet">
-                     <string notr="true">font:87 12pt &quot;Arial Black&quot;;
+                     <widget class="QWidget" name="widget_13" native="true">
+                      <layout class="QHBoxLayout" name="horizontalLayout_10">
+                       <item>
+                        <spacer name="horizontalSpacer_12">
+                         <property name="orientation">
+                          <enum>Qt::Horizontal</enum>
+                         </property>
+                         <property name="sizeHint" stdset="0">
+                          <size>
+                           <width>11</width>
+                           <height>20</height>
+                          </size>
+                         </property>
+                        </spacer>
+                       </item>
+                       <item>
+                        <widget class="QLabel" name="label_6">
+                         <property name="minimumSize">
+                          <size>
+                           <width>500</width>
+                           <height>50</height>
+                          </size>
+                         </property>
+                         <property name="maximumSize">
+                          <size>
+                           <width>500</width>
+                           <height>50</height>
+                          </size>
+                         </property>
+                         <property name="styleSheet">
+                          <string notr="true">font:87 12pt &quot;Arial Black&quot;;
 background-color: rgb(255, 255, 255);
 color: rgb(0, 0, 0);</string>
-                    </property>
-                    <property name="text">
-                     <string/>
-                    </property>
-                    <property name="alignment">
-                     <set>Qt::AlignCenter</set>
-                    </property>
-                   </widget>
+                         </property>
+                         <property name="text">
+                          <string/>
+                         </property>
+                         <property name="alignment">
+                          <set>Qt::AlignCenter</set>
+                         </property>
+                        </widget>
+                       </item>
+                       <item>
+                        <spacer name="horizontalSpacer_13">
+                         <property name="orientation">
+                          <enum>Qt::Horizontal</enum>
+                         </property>
+                         <property name="sizeHint" stdset="0">
+                          <size>
+                           <width>12</width>
+                           <height>20</height>
+                          </size>
+                         </property>
+                        </spacer>
+                       </item>
+                      </layout>
+                     </widget>
+                    </item>
+                   </layout>
                   </widget>
                  </item>
                 </layout>
