--- a/PythonApplication1/interfaz2.ui
+++ b/PythonApplication1/interfaz2.ui
@@ -1396,10 +1396,16 @@ color: rgb(255, 255, 255);
                     </property>
                     <item>
                      <widget class="QLabel" name="label_5">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>100</height>
+                       </size>
+                      </property>
                       <property name="maximumSize">
                        <size>
                         <width>16777215</width>
-                        <height>40</height>
+                        <height>100</height>
                        </size>
                       </property>
                       <property name="styleSheet">
@@ -1416,6 +1422,18 @@ color:rgb(255, 255, 255);</string>
                     </item>
                     <item>
                      <widget class="QWidget" name="widget_12" native="true">
+                      <property name="minimumSize">
+                       <size>
+                        <width>0</width>
+                        <height>100</height>
+                       </size>
+                      </property>
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>100</height>
+                       </size>
+                      </property>
                       <layout class="QHBoxLayout" name="horizontalLayout_9">
                        <property name="spacing">
                         <number>0</number>
@@ -1433,13 +1451,13 @@ color:rgb(255, 255, 255);</string>
                         <number>0</number>
                        </property>
                        <item>
-                        <spacer name="horizontalSpacer_10">
+                        <spacer name="horizontalSpacer_18">
                          <property name="orientation">
                           <enum>Qt::Horizontal</enum>
                          </property>
                          <property name="sizeHint" stdset="0">
                           <size>
-                           <width>40</width>
+                           <width>263</width>
                            <height>20</height>
                           </size>
                          </property>
@@ -1507,36 +1525,268 @@ border:3px solid rgb(120,157,186);</string>
                     </item>
                     <item>
                      <widget class="QWidget" name="widget_13" native="true">
-                      <layout class="QHBoxLayout" name="horizontalLayout_10">
+                      <property name="maximumSize">
+                       <size>
+                        <width>16777215</width>
+                        <height>300</height>
+                       </size>
+                      </property>
+                      <layout class="QVBoxLayout" name="verticalLayout_11" stretch="0,5">
+                       <property name="spacing">
+                        <number>0</number>
+                       </property>
+                       <property name="leftMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="topMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="rightMargin">
+                        <number>0</number>
+                       </property>
+                       <property name="bottomMargin">
+                        <number>0</number>
+                       </property>
                        <item>
-                        <spacer name="horizontalSpacer_12">
-                         <property name="orientation">
-                          <enum>Qt::Horizontal</enum>
+                        <widget class="QWidget" name="newproces" native="true">
+                         <property name="styleSheet">
+                          <string notr="true">QFrame{	
+	
+	
+	
+	background-color: rgba(61, 80, 95,100);
+	
+}
+QPushButton{
+padding:10px;
+border-radius:5px;	
+font:87 10pt &quot;Arial &quot;;
+background-color:rgba(33, 43, 51,100);
+border:3px solid rgb(120,157,186);
+
+color:rgb(253, 253, 253);
+
+}
+QPushButton:hover{
+
+background-color:rgb(120, 157, 186);}</string>
                          </property>
-                         <property name="sizeHint" stdset="0">
-                          <size>
-                           <width>11</width>
-                           <height>20</height>
-                          </size>
-                         </property>
-                        </spacer>
+                         <layout class="QVBoxLayout" name="verticalLayout_13">
+                          <item>
+                           <widget class="QWidget" name="widget_17" native="true">
+                            <property name="minimumSize">
+                             <size>
+                              <width>0</width>
+                              <height>0</height>
+                             </size>
+                            </property>
+                            <property name="maximumSize">
+                             <size>
+                              <width>16777215</width>
+                              <height>60</height>
+                             </size>
+                            </property>
+                            <layout class="QHBoxLayout" name="horizontalLayout_17">
+                             <item>
+                              <spacer name="horizontalSpacer_21">
+                               <property name="orientation">
+                                <enum>Qt::Horizontal</enum>
+                               </property>
+                               <property name="sizeHint" stdset="0">
+                                <size>
+                                 <width>327</width>
+                                 <height>20</height>
+                                </size>
+                               </property>
+                              </spacer>
+                             </item>
+                             <item>
+                              <widget class="QLabel" name="label_11">
+                               <property name="styleSheet">
+                                <string notr="true">font:87 14pt &quot;Arial &quot;;
+color:rgb(255, 255, 255);</string>
+                               </property>
+                               <property name="text">
+                                <string>Nuevo proceso a usar</string>
+                               </property>
+                              </widget>
+                             </item>
+                             <item>
+                              <spacer name="horizontalSpacer_22">
+                               <property name="orientation">
+                                <enum>Qt::Horizontal</enum>
+                               </property>
+                               <property name="sizeHint" stdset="0">
+                                <size>
+                                 <width>326</width>
+                                 <height>20</height>
+                                </size>
+                               </property>
+                              </spacer>
+                             </item>
+                            </layout>
+                           </widget>
+                          </item>
+                          <item>
+                           <widget class="QWidget" name="widget_16" native="true">
+                            <property name="minimumSize">
+                             <size>
+                              <width>0</width>
+                              <height>0</height>
+                             </size>
+                            </property>
+                            <property name="maximumSize">
+                             <size>
+                              <width>16777215</width>
+                              <height>60</height>
+                             </size>
+                            </property>
+                            <layout class="QHBoxLayout" name="horizontalLayout_10">
+                             <item>
+                              <spacer name="horizontalSpacer_19">
+                               <property name="orientation">
+                                <enum>Qt::Horizontal</enum>
+                               </property>
+                               <property name="sizeHint" stdset="0">
+                                <size>
+                                 <width>400</width>
+                                 <height>20</height>
+                                </size>
+                               </property>
+                              </spacer>
+                             </item>
+                             <item>
+                              <widget class="QLineEdit" name="dato1">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>500</width>
+                                 <height>0</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>500</width>
+                                 <height>40</height>
+                                </size>
+                               </property>
+                               <property name="styleSheet">
+                                <string notr="true">	background-color:rgba(33, 43, 51,100);
+font: 87 12pt &quot;Arial &quot;;
+border-top-left-radius:8px;
+border-bottom-left-radius:8px;
+color: rgb(255, 255, 255);
+border:3px solid rgb(120,157,186);</string>
+                               </property>
+                               <property name="text">
+                                <string>Ingresé el nuevo proceso que quiere usar </string>
+                               </property>
+                              </widget>
+                             </item>
+                             <item>
+                              <spacer name="horizontalSpacer_20">
+                               <property name="orientation">
+                                <enum>Qt::Horizontal</enum>
+                               </property>
+                               <property name="sizeHint" stdset="0">
+                                <size>
+                                 <width>40</width>
+                                 <height>20</height>
+                                </size>
+                               </property>
+                              </spacer>
+                             </item>
+                             <item>
+                              <widget class="QPushButton" name="bt_ingresar">
+                               <property name="minimumSize">
+                                <size>
+                                 <width>200</width>
+                                 <height>43</height>
+                                </size>
+                               </property>
+                               <property name="maximumSize">
+                                <size>
+                                 <width>200</width>
+                                 <height>43</height>
+                                </size>
+                               </property>
+                               <property name="text">
+                                <string>Ingresar</string>
+                               </property>
+                               <property name="icon">
+                                <iconset>
+                                 <normaloff>icons/corner-left-up.svg</normaloff>icons/corner-left-up.svg</iconset>
+                               </property>
+                               <property name="iconSize">
+                                <size>
+                                 <width>25</width>
+                                 <height>25</height>
+                                </size>
+                               </property>
+                              </widget>
+                             </item>
+                             <item>
+                              <spacer name="horizontalSpacer_12">
+                               <property name="orientation">
+                                <enum>Qt::Horizontal</enum>
+                               </property>
+                               <property name="sizeHint" stdset="0">
+                                <size>
+                                 <width>29</width>
+                                 <height>35</height>
+                                </size>
+                               </property>
+                              </spacer>
+                             </item>
+                            </layout>
+                           </widget>
+                          </item>
+                         </layout>
+                        </widget>
                        </item>
                        <item>
-                        <widget class="QLabel" name="label_6">
+                        <widget class="QWidget" name="widget_15" native="true">
                          <property name="minimumSize">
                           <size>
-                           <width>500</width>
-                           <height>50</height>
+                           <width>0</width>
+                           <height>0</height>
                           </size>
                          </property>
                          <property name="maximumSize">
                           <size>
-                           <width>500</width>
-                           <height>50</height>
+                           <width>16777215</width>
+                           <height>200</height>
                           </size>
                          </property>
-                         <property name="styleSheet">
-                          <string notr="true">font: 87 12pt &quot;Arial Black&quot;;
+                         <layout class="QHBoxLayout" name="horizontalLayout_16">
+                          <item>
+                           <spacer name="horizontalSpacer_13">
+                            <property name="orientation">
+                             <enum>Qt::Horizontal</enum>
+                            </property>
+                            <property name="sizeHint" stdset="0">
+                             <size>
+                              <width>211</width>
+                              <height>138</height>
+                             </size>
+                            </property>
+                           </spacer>
+                          </item>
+                          <item>
+                           <widget class="QLabel" name="label_6">
+                            <property name="minimumSize">
+                             <size>
+                              <width>500</width>
+                              <height>50</height>
+                             </size>
+                            </property>
+                            <property name="maximumSize">
+                             <size>
+                              <width>500</width>
+                              <height>50</height>
+                             </size>
+                            </property>
+                            <property name="styleSheet">
+                             <string notr="true">font: 87 12pt &quot;Arial Black&quot;;
 	background-color:rgba(33, 43, 51,100);
 color: rgb(255, 255, 255);
 border-top-left-radius:10px;
@@ -1544,27 +1794,30 @@ border-bottom-left-radius:10px;
 border-top-right-radius:10px;
 border-bottom-right-radius:10px;
 border:3px solid rgb(120,157,186);</string>
-                         </property>
-                         <property name="text">
-                          <string/>
-                         </property>
-                         <property name="alignment">
-                          <set>Qt::AlignCenter</set>
-                         </property>
+                            </property>
+                            <property name="text">
+                             <string/>
+                            </property>
+                            <property name="alignment">
+                             <set>Qt::AlignCenter</set>
+                            </property>
+                           </widget>
+                          </item>
+                          <item>
+                           <spacer name="horizontalSpacer_10">
+                            <property name="orientation">
+                             <enum>Qt::Horizontal</enum>
+                            </property>
+                            <property name="sizeHint" stdset="0">
+                             <size>
+                              <width>189</width>
+                              <height>138</height>
+                             </size>
+                            </property>
+                           </spacer>
+                          </item>
+                         </layout>
                         </widget>
-                       </item>
-                       <item>
-                        <spacer name="horizontalSpacer_13">
-                         <property name="orientation">
-                          <enum>Qt::Horizontal</enum>
-                         </property>
-                         <property name="sizeHint" stdset="0">
-                          <size>
-                           <width>12</width>
-                           <height>20</height>
-                          </size>
-                         </property>
-                        </spacer>
                        </item>
                       </layout>
                      </widget>
@@ -1644,11 +1897,7 @@ font:87 12pt &quot;Arial Black&quot;;}
                     </size>
                    </property>
                    <property name="styleSheet">
-                    <string notr="true">
-
-
-
-</string>
+                    <string notr="true"/>
                    </property>
                    <property name="text">
                     <string>Filtrar</string>
