--- a/PythonApplication1/interfaz2.ui
+++ b/PythonApplication1/interfaz2.ui
@@ -47,10 +47,10 @@ background-color: rgb(33, 43, 51);
        <string notr="true">QFrame{
 	
 	
-	background-color: rgb(61, 80, 95);
+	background-color:rgb(58, 75, 89);
 	
 	
-	border-color: rgb(0, 0, 0);
+
 	
 }
 QPushButton{
@@ -292,14 +292,14 @@ QFrame{
 	
 	
 	
-	background-color: rgba(61, 80, 95,100);
+	background-color:rgba(24, 34, 43,100);
 	
 }
 QPushButton{
 padding:10px;
 border-radius:5px;	
 font:87 12pt &quot;Arial &quot;;
-background-color:rgba(33, 43, 51,100);
+background-color:rgb(13, 21, 26);
 border:3px solid rgb(120,157,186);
 
 color:rgb(253, 253, 253);
@@ -343,7 +343,7 @@ background-color:rgb(120, 157, 186);}</string>
              <cursorShape>ArrowCursor</cursorShape>
             </property>
             <property name="text">
-             <string>Equipo 1</string>
+             <string> Spectrometers  Perkin</string>
             </property>
             <property name="icon">
              <iconset>
@@ -366,7 +366,7 @@ background-color:rgb(120, 157, 186);}</string>
              </size>
             </property>
             <property name="text">
-             <string>Equipo 2</string>
+             <string>Spectrophotometer E 200 </string>
             </property>
             <property name="icon">
              <iconset>
@@ -453,7 +453,7 @@ font:87 12pt &quot;Arial Black&quot;;}
             </property>
             <widget class="QWidget" name="page_equipo1">
              <property name="styleSheet">
-              <string notr="true">background-color: rgba(61, 80, 95,100);
+              <string notr="true">background-color: rgba(27, 38, 47,100);
 
 QPushButton{
 border-color:rgb(23, 2, 127);
@@ -559,7 +559,7 @@ color:rgb(255, 255, 255);</string>
                        </size>
                       </property>
                       <property name="styleSheet">
-                       <string notr="true">background-color: rgba(61, 80, 95,100);</string>
+                       <string notr="true">background-color: rgba(27, 38, 47,100);</string>
                       </property>
                       <layout class="QHBoxLayout" name="horizontalLayout_5">
                        <property name="leftMargin">
@@ -932,8 +932,7 @@ border-bottom-right-radius:10px;</string>
 	
 	
 	
-	background-color: rgba(61, 80, 95,100);
-	
+	background-color:rgba(24, 34, 43,100);
 }
 
 
@@ -943,7 +942,7 @@ border-color:rgb(23, 2, 127);
 	
 font:87 12pt &quot;Arial&quot;;
 
-	background-color:rgba(33, 43, 51,100);
+	background-color:rgb(13, 21, 26);
 border-top-left-radius:20px;
 border-bottom-left-radius:20px;
 	color:rgb(253, 253, 253);
@@ -1037,7 +1036,7 @@ font:87 12pt &quot;Arial Black&quot;;}
             </widget>
             <widget class="QWidget" name="page_Inicio">
              <property name="styleSheet">
-              <string notr="true">	background-color: rgba(61, 80, 95,100);</string>
+              <string notr="true">background-color:rgba(27, 38, 47,100);</string>
              </property>
              <layout class="QHBoxLayout" name="horizontalLayout_12" stretch="0">
               <property name="spacing">
@@ -1337,7 +1336,7 @@ color: rgb(255, 255, 255);
             </widget>
             <widget class="QWidget" name="page_equipo2">
              <property name="styleSheet">
-              <string notr="true">background-color: rgba(61, 80, 95,100);</string>
+              <string notr="true">background-color:rgba(27, 38, 47,100);</string>
              </property>
              <layout class="QVBoxLayout" name="verticalLayout_5" stretch="8,1">
               <property name="spacing">
@@ -1561,7 +1560,7 @@ QPushButton{
 padding:10px;
 border-radius:5px;	
 font:87 10pt &quot;Arial &quot;;
-background-color:rgba(33, 43, 51,100);
+	background-color:rgb(13, 21, 26);
 border:3px solid rgb(120,157,186);
 
 color:rgb(253, 253, 253);
@@ -1833,8 +1832,7 @@ border:3px solid rgb(120,157,186);</string>
                 <property name="styleSheet">
                  <string notr="true">QWidget{
 	
-	
-		background-color: rgba(61, 80, 95,100);
+	background-color:rgba(24, 34, 43,100);
 	
 }
 
@@ -1845,7 +1843,7 @@ border-color:rgb(23, 2, 127);
 	
 font:87 12pt &quot;Arial&quot;;
 
-	background-color:rgba(33, 43, 51,100);
+	background-color:rgb(13, 21, 26);
 border-top-left-radius:20px;
 border-bottom-left-radius:20px;
 	color:rgb(253, 253, 253);
