--- a/PythonApplication1/interfaz2.ui
+++ b/PythonApplication1/interfaz2.ui
@@ -543,7 +543,7 @@ font:87 12pt &quot;Arial Black&quot;;}</string>
 color:rgb(255, 255, 255);</string>
                       </property>
                       <property name="text">
-                       <string>Selección de Método</string>
+                       <string>Selección de Columnas</string>
                       </property>
                       <property name="alignment">
                        <set>Qt::AlignCenter</set>
@@ -619,17 +619,12 @@ border:3px solid rgb(120,157,186);</string>
                          </item>
                          <item>
                           <property name="text">
-                           <string>Método Llama</string>
+                           <string>Requerimientos Usales</string>
                           </property>
                          </item>
                          <item>
                           <property name="text">
-                           <string>Método Horno de Grafito</string>
-                          </property>
-                         </item>
-                         <item>
-                          <property name="text">
-                           <string>Método Generación de Hidruros</string>
+                           <string>Agregar columnas</string>
                           </property>
                          </item>
                         </widget>
@@ -651,7 +646,7 @@ border:3px solid rgb(120,157,186);</string>
                      </widget>
                     </item>
                     <item>
-                     <widget class="QWidget" name="widget_4" native="true">
+                     <widget class="QWidget" name="normally" native="true">
                       <layout class="QVBoxLayout" name="verticalLayout_9">
                        <property name="spacing">
                         <number>0</number>
@@ -669,7 +664,7 @@ border:3px solid rgb(120,157,186);</string>
                         <number>0</number>
                        </property>
                        <item>
-                        <widget class="QLabel" name="label_3">
+                        <widget class="QLabel" name="agregar">
                          <property name="maximumSize">
                           <size>
                            <width>16777215</width>
@@ -681,7 +676,7 @@ border:3px solid rgb(120,157,186);</string>
 color:rgb(255, 255, 255);</string>
                          </property>
                          <property name="text">
-                          <string>Selección de Proceso</string>
+                          <string>Proceso de Agregación de Columnas</string>
                          </property>
                          <property name="alignment">
                           <set>Qt::AlignCenter</set>
@@ -689,20 +684,8 @@ color:rgb(255, 255, 255);</string>
                         </widget>
                        </item>
                        <item>
-                        <widget class="QWidget" name="widget_9" native="true">
+                        <widget class="QWidget" name="newcolmns" native="true">
                          <layout class="QHBoxLayout" name="horizontalLayout_6">
-                          <property name="leftMargin">
-                           <number>0</number>
-                          </property>
-                          <property name="topMargin">
-                           <number>0</number>
-                          </property>
-                          <property name="rightMargin">
-                           <number>0</number>
-                          </property>
-                          <property name="bottomMargin">
-                           <number>0</number>
-                          </property>
                           <item>
                            <spacer name="horizontalSpacer_5">
                             <property name="orientation">
@@ -746,6 +729,26 @@ border:3px solid rgb(120,157,186);</string>
                               <string>Seleccioné una opción</string>
                              </property>
                             </item>
+                            <item>
+                             <property name="text">
+                              <string>SD</string>
+                             </property>
+                            </item>
+                            <item>
+                             <property name="text">
+                              <string>Sig</string>
+                             </property>
+                            </item>
+                            <item>
+                             <property name="text">
+                              <string>Bkgnd</string>
+                             </property>
+                            </item>
+                            <item>
+                             <property name="text">
+                              <string>Peak</string>
+                             </property>
+                            </item>
                            </widget>
                           </item>
                           <item>
@@ -765,7 +768,7 @@ border:3px solid rgb(120,157,186);</string>
                         </widget>
                        </item>
                        <item>
-                        <widget class="QWidget" name="widget_10" native="true">
+                        <widget class="QWidget" name="etiqueta" native="true">
                          <layout class="QHBoxLayout" name="horizontalLayout_7">
                           <property name="leftMargin">
                            <number>0</number>
